[project]
name = "blogcaster"
version = "0.1.0"
description = "Python tools for easily translating your blog content to podcasts & YouTube"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "eyed3>=0.9.7",
    "huggingface-hub>=0.27.1",
    "moviepy>=2.1.1",
    "numpy>=2.2.1",
    "openai>=1.59.3",
    "opencv-python>=4.10.0.84",
    "pydantic>=2.10.4",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "F403",
    "F405"
]
fixable = ["ALL"]